<resources>
    <string name="app_name">The Flickks</string>
    <string name="google_key">AIzaSyAXgcQMTbw-_4oGHv9FYJZOIKs11HqYL-w</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome\nback</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="create_account">Create Account</string>
    <string name="retype_password">Retype Password</string>
    <string name="invalid_email">Wrong email format</string>
    <string name="not_match_pass">Retyped password isn\'t matched with password</string>
    <string name="invalid_pass_condition">Password must contains 8 to 20 characters</string>
    <string name="invalid_name_condition">Username must contains 4 to 20 characters</string>
    <string name="invalid_character">The given username is invalid because it consists of invalid character </string>
    <string name="invalid_pass_duplicate">The new password cannot be the same as the old password</string>
    <string name="empty_error">This field cannot be empty</string>
    <string name="short_pass">This field cannot be empty</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_successful">Login Successful!</string>
    <string name="request_canceled">Request canceled</string>
    <string name="registration_successful">Registraion successful!</string>
    <string name="no_results">No results 😓</string>
    <string name="retry">Retry</string>
    <string name="review">Review</string>
    <string name="most_popular">Most Popular</string>
    <string name="more_than"><![CDATA[More than >>]]></string>
    <string name="top_rating">Top Rating</string>

    <string name="now_playing">Now Playing</string>
    <string name="keyword">Keyword ...</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="tap_to_change">Tap to change</string>
    <string name="change_password">Change Password</string>
    <string name="login_with_fingerprint">Login with Fingerprint</string>
    <string name="no_matching_movies_found">No matching movies found</string>
    <string name="save">Save</string>
    <string name="edit_username">Edit Username</string>
    <string name="edit_password">Edit password</string>
    <string name="current_password">Current password</string>
    <string name="title">Title</string>
    <string name="no_internet">No internet access</string>


</resources>